--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "basic-app/theme-clean-blog",
+    "license": "MIT",
     "require": {
         "phptheme/theme-clean-blog": "*"
     },
